@@ -1,3 +1,8 @@
+2005-10-20  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/22618
+	* g++.dg/parse/access8.C: New test.
+
 2005-10-20  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/20050922-1.c: Skip on Solaris 2.5.1 to 9.
